fix navbar overflow pb

--- a/source/stylesheets/components/caroussel.scss
+++ b/source/stylesheets/components/caroussel.scss
@@ -1,3 +1,8 @@
+.framebox {
+  position: relative;
+  overflow: hidden;
+}
+
 .slideshow {
    width: 300px*11;
    height: 150px;
@@ -15,3 +20,5 @@
 .slideshow li {
    float: left;
 }
+
+
