--- a/source/stylesheets/components/navbar2.scss
+++ b/source/stylesheets/components/navbar2.scss
@@ -9,7 +9,7 @@
   z-index: 100;
   background: linear-gradient(0.25turn, #142F5F, #27509B);
   height: 50px;
-  width: 100vw;
+  width: 100%;
   box-shadow: 1px 1px 2px 1px rgba(0,0,0, 0.5);
   transition: all ease-in-out 700ms;
 }
